<?xml version="1.0" encoding="utf-8"?>
<!-- layout for main page: timer, score, holes, animals -->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/instructions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/bubble"
        android:text="@string/go"
        android:textColor="@color/grey"
        android:textSize="50sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.05" />

    <TextView
        android:id="@+id/timedisplay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/bubble"
        android:text="@string/text_time"
        android:textColor="@color/red"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/instructions"
        app:layout_constraintVertical_bias="0.025" />

    <TextView
        android:id="@+id/currentscore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/bubble"
        android:text="@string/text_score"
        android:textColor="@color/grey"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/timedisplay"
        app:layout_constraintVertical_bias="0.025" />

    <ImageButton
        android:id="@+id/hole3"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginEnd="28dp"
        android:background="@null"
        android:scaleType="centerCrop"
        android:src="@drawable/hole"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.477" />

    <ImageButton
        android:id="@+id/hole2"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:background="@null"
        android:scaleType="centerCrop"
        android:src="@drawable/hole"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.477" />

    <ImageButton
        android:id="@+id/hole5"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="20dp"
        android:background="@null"
        android:scaleType="centerCrop"
        android:src="@drawable/hole"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.145"
        app:layout_constraintStart_toEndOf="@+id/hole4"
        app:layout_constraintTop_toBottomOf="@+id/hole2" />

    <ImageButton
        android:id="@+id/hole8"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:background="@null"
        android:scaleType="centerCrop"
        android:src="@drawable/hole"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hole5"
        app:layout_constraintVertical_bias="0.081" />

    <ImageButton
        android:id="@+id/hole6"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:background="@null"
        android:scaleType="centerCrop"
        android:src="@drawable/hole"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.482"
        app:layout_constraintStart_toEndOf="@+id/hole2"
        app:layout_constraintTop_toBottomOf="@+id/hole3"
        app:layout_constraintVertical_bias="0.086" />

    <ImageButton
        android:id="@+id/hole1"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:background="@null"
        android:scaleType="centerCrop"
        android:src="@drawable/hole"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.102"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.477" />

    <ImageButton
        android:id="@+id/hole7"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:background="@null"
        android:scaleType="centerCrop"
        android:src="@drawable/hole"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.102"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hole4"
        app:layout_constraintVertical_bias="0.122" />

    <ImageButton
        android:id="@+id/hole9"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginEnd="28dp"
        android:background="@null"
        android:scaleType="centerCrop"
        android:src="@drawable/hole"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hole6"
        app:layout_constraintVertical_bias="0.09" />

    <ImageButton
        android:id="@+id/hole4"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:background="@null"
        android:scaleType="centerCrop"
        android:src="@drawable/hole"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.102"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hole1"
        app:layout_constraintVertical_bias="0.06" />

</androidx.constraintlayout.widget.ConstraintLayout>